--- a/jspit/dla.css
+++ b/jspit/dla.css
@@ -51,3 +51,38 @@
   background-color: #1f472f;
   color: var(--dark-sea-green);
 }
+
+.grid {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+aside.console {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: 2;
+}
+
+.tile               { z-index: 1 }
+.tile.particle      { z-index: 10 }
+.tile.particle.live { z-index: 100 }
+.tile.mover         { z-index: 1000 }
+
+.plane { display: none }
+.plane[data-plane="domgeon-inspect"] { display: initial }
+
+.plane[data-plane="solid-meme"] { z-index: 1 }
+.plane[data-plane="solid"]      { z-index: 10 }
+
+.grid:not(.playing) .plane:not(.meme) { display: initial }
+.grid.playing .plane.meme { display: initial }
+
+.grid.playing .tile.particle[data-light]       { opacity: var(--light, 15%); }
+.grid.playing .tile.particle:not([data-light]) { opacity: 15%; }
+
+.tile.mover { --lightInit: 8; }
+
+.tile.particle.prime.live { --lightInit: 4.0; }
