--- a/cube/index.css
+++ b/cube/index.css
@@ -40,31 +40,31 @@ aside.menu {
 }
 
 .front {
-    background: rgba(90,90,90,.7);
-    transform: translateZ(50px);
+  background: magenta;
+  transform: translateZ(50px);
 }
 
 .back {
-    background: rgba(0,210,0,.7);
-    transform: rotateY(180deg) translateZ(50px);
+  background: green;
+  transform: rotateY(180deg) translateZ(50px);
 }
 
 .right {
-  background: rgba(210,0,0,.7);
+  background: yellow;
   transform: rotateY(90deg) translateZ(50px);
 }
 
 .left {
-  background: rgba(0,0,210,.7);
+  background: blue;
   transform: rotateY(-90deg) translateZ(50px);
 }
 
 .top {
-  background: rgba(210,210,0,.7);
+  background: red;
   transform: rotateX(90deg) translateZ(50px) rotateZ(180deg);
 }
 
 .bottom {
-  background: rgba(210,0,210,.7);
+  background: cyan;
   transform: rotateX(-90deg) translateZ(50px);
 }
