--- a/cube/index.css
+++ b/cube/index.css
@@ -72,7 +72,7 @@ aside.menu {
   justify-content: center;
   background-color: #eee;
   font-size: 40px;
-  color: white;
+  color: #aaa;
 }
 
 .facet {
@@ -81,7 +81,6 @@ aside.menu {
   justify-content: center;
   height: 900px;
   width: 900px;
-  background-color: #eee;
   color: white;
   border: dotted black 10px;
   backface-visibility: hidden;
