--- a/cube/index.css
+++ b/cube/index.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-color: rebeccapurple;
+  background-color: #8967AA; /* rebeccapurple; */
   height: 100%;
   width: 100%;
   margin: 0;
@@ -56,7 +56,7 @@ aside.menu {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #eee;
+  background-color: white;
   font-size: 40px;
   color: #aaa;
 }
