--- a/cube/index.css
+++ b/cube/index.css
@@ -124,3 +124,13 @@ text.moji {
   dominant-baseline: central;
   text-anchor: middle;
 }
+
+#debug {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  font-size: 30px;
+  color: white;
+  background-color: black;
+  padding: 10px;
+}
