[cube] animated button presses and prettier panels

--- a/cube/index.css
+++ b/cube/index.css
@@ -136,32 +136,30 @@ text.moji {
   padding: 10px;
 }
 
-#controls {
-  position: absolute;
-  bottom: 0;
-  right: 0;
+.panel {
   font-size: 30px;
   color: black;
   backdrop-filter: blur(5px);
   padding: 10px;
+  margin: 10px;
+  border: solid 4px rgba(0, 0, 0, 5%);
+  border-radius: 50px;
+}
+
+#controls {
+  position: absolute;
+  bottom: 0;
+  right: 0;
 }
 
 #health {
   position: absolute;
   top: 0;
   left: 0;
-  font-size: 30px;
-  color: black;
-  padding: 10px;
-  backdrop-filter: blur(5px);
 }
 
 #stamina {
   position: absolute;
   top: 0;
   right: 0;
-  font-size: 30px;
-  color: black;
-  padding: 10px;
-  backdrop-filter: blur(5px);
 }
