--- a/tarot/index.css
+++ b/tarot/index.css
@@ -3,6 +3,12 @@
   color: #ddd;
 }
 
+input, button, select, textarea {
+  background-color: #444;
+  border: 0.1em solid #555;
+  color: #eee;
+}
+
 :root, body { height: 100%; }
 
 * {
