--- a/cube/index.css
+++ b/cube/index.css
@@ -163,3 +163,11 @@ text.moji {
   top: 0;
   right: 0;
 }
+
+.reticle {
+  fill: transparent;
+  stroke: rgba(0, 0, 0, 0.5);
+  stroke-dasharray: 0.13;
+  stroke-width: 0.05;
+  z-index: 1;
+}
