--- a/cube/index.css
+++ b/cube/index.css
@@ -147,16 +147,25 @@ text.moji {
   left: 0;
 }
 
-#debug {
-  position: absolute;
-  bottom: 0;
-  left: 0;
+#coord {
+  position: relative;
+  left: calc(var(--tileSize) * 1.1px);
+  bottom: 0px;
 
   font-family: monospace;
   font-size: 30px;
   color: black;
-  backdrop-filter: blur(5px);
   padding: 10px;
+}
+
+.blade {
+  transform-origin: bottom left;
+}
+
+#coordBlade {
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
 
 #health {
