--- a/cube/index.css
+++ b/cube/index.css
@@ -1,16 +1,29 @@
 
+html {
+  user-select: none;
+  touch-action: none;
+  box-sizing: border-box;
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
+
+  height: 100vh;
+  width: 100vw;
+
+  overflow: hidden;
+}
+
 *,
 ::before,
 ::after {
   user-select: none;
   margin: 0;
-  box-sizing: border-box;
+  box-sizing: inherit;
 }
 
 body {
   background-color: #8967AA; /* rebeccapurple; */
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   margin: 0;
   overflow: hidden;
 }
@@ -23,23 +36,6 @@ aside.menu {
   top: 0;
   right: 0;
   width: 40%;
-}
-
-#container {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  perspective: 500px;
-  overflow: hidden;
-}
-
-#retical {
-  position: absolute;
-  width: calc(var(--tileSizePx) * 1px);
-  height: calc(var(--tileSizePx) * 1px);
-  top: calc((100% - var(--tileSizePx) * 1px) / 2);
-  left: calc((100% - var(--tileSizePx) * 1px) / 2);
-  border: solid red 3px;
 }
 
 #context {
@@ -63,6 +59,42 @@ aside.menu {
   color: #aaa;
 }
 
+.map {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: hidden;
+}
+
+.origin {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  right: 50%;
+  bottom: 50%;
+  transform-origin: top left;
+}
+
+.viewport {
+  position: absolute;
+  overflow: visible;
+  top: 0;
+  left: 0;
+  transform-origin: top left;
+}
+
+.face {
+  font-size: calc(var(--tileSizePx) * 1px);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: calc(var(--faceSize) * var(--tileSizePx) * 1px);
+  height: calc(var(--faceSize) * var(--tileSizePx) * 1px);
+  transform-origin: top left;
+}
+
 .facet {
   position: absolute;
   display: flex;
@@ -76,6 +108,9 @@ aside.menu {
   padding: 0;
   backface-visibility: hidden;
   overflow: hidden;
+  transform-origin: top left;
+  top: 0;
+  left: 0;
 }
 
 .agent {
@@ -119,24 +154,24 @@ aside.menu {
 }
 
 text.moji {
+  transform: translateY(0.25px);
   font-size: 0.7px;
-  height: calc(var(--tileSizePx) * 1px);
-  width: calc(var(--tileSizePx) * 1px);
-  dominant-baseline: central;
+  /* dominant-baseline: central; DOES WORK ON iOS */
   text-anchor: middle;
 }
 
 .panel {
-  font-size: 30px;
+  font-size: 20px;
   color: black;
   backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
   padding: 10px;
   margin: 10px;
   border: solid 4px rgba(0, 0, 0, 25%);
   border-radius: 50px;
 }
 
-#controls {
+.controlPanel {
   user-select: none;
   cursor: pointer;
   position: absolute;
@@ -144,40 +179,20 @@ text.moji {
   right: 0;
 }
 
-#hamburger {
+.hamburgerPanel {
   position: absolute;
   bottom: 0;
   left: 0;
 }
 
-#coord {
+.menu {
   position: relative;
-  left: calc(var(--tileSizePx) * 1.5px);
-  bottom: 0px;
 
-  height: calc(var(--tileSizePx) * 1px);
-  line-height: calc(var(--tileSizePx) * 0.5px);
-
-  font-family: monospace;
-  font-size: calc(var(--tileSizePx) * 0.5px);
-  color: black;
-
-  padding-left: calc(var(--tileSizePx) * 0.5px);
-  padding-right: calc(var(--tileSizePx) * 0.5px);
-}
-
-#menu {
-  position: relative;
-  bottom: calc(var(--tileSizePx) * 1.5px);
-  left: 0px;
-
-  font-family: monospace;
-  font-size: 30px;
   color: black;
   padding: 10px;
 }
 
-#curb {
+.menuCurb {
   position: absolute;
   /* position to compensate for padding */
   top: 10px;
@@ -190,32 +205,16 @@ text.moji {
   height: calc(var(--tileSizePx) * 1px);
   line-height: calc(var(--tileSizePx) * 1px);
   /* https://css-tricks.com/snippets/css/font-stacks/ */
-  /* font-family: "Palatino Linotype", Palatino, Palladio, "URW Palladio L", "Book Antiqua", Baskerville, "Bookman Old Style", "Bitstream Charter", "Nimbus Roman No9 L", Garamond, "Apple Garamond", "ITC Garamond Narrow", "New Century Schoolbook", "Century Schoolbook", "Century Schoolbook L", Georgia, serif; */
-  /* font-family: Constantia, "Lucida Bright", Lucidabright, "Lucida Serif", Lucida, "DejaVu Serif", "Bitstream Vera Serif", "Liberation Serif", Georgia, serif; */
-  /* font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; */
-  /* font-family: Corbel, "Lucida Grande", "Lucida Sans Unicode", "Lucida Sans", "DejaVu Sans", "Bitstream Vera Sans", "Liberation Sans", Verdana, "Verdana Ref", sans-serif; */
   font-family: "Segoe UI", Candara, "Bitstream Vera Sans", "DejaVu Sans", "Bitstream Vera Sans", "Trebuchet MS", Verdana, "Verdana Ref", sans-serif;
   font-size: calc(var(--tileSizePx) * 0.7px);
   margin: 0;
 }
 
 .blade {
-  transform-origin: bottom left;
+  transform-origin: 0 calc(100% + var(--tileSizePx) * 3px + 10px);
   position: absolute;
-  bottom: 0;
+  bottom: calc(var(--tileSizePx) * 3px + 10px);
   left: 0;
-}
-
-#health {
-  position: absolute;
-  top: 0;
-  left: 0;
-}
-
-#stamina {
-  position: absolute;
-  top: 0;
-  right: 0;
 }
 
 .reticle {
